minor transtion fixes on mobile

--- a/assets/scss/base/_animations.scss
+++ b/assets/scss/base/_animations.scss
@@ -4,7 +4,7 @@ header a {
   transition: all .1s ease-in-out;
 }
 
-p a, .sidebar__social a, .btn, .btn--sidebar, .form input, .comment-respond input, .comment-respond a{
+p a, .sidebar__social a, .btn, .btn--sidebar, .form input, .comment-respond input, .comment-respond a, .comments-link a, .post-categories a{
   transition: all .1s ease-in-out;
 }
 
